language/move-lang/tests/move_check/parser/function_public_native.exp
error: 

   ┌── tests/move_check/parser/function_public_native.move:3:12 ───
   │
 3 │     public native fun f();
   │            ^^^^^^ Unexpected 'native'
   ·
 3 │     public native fun f();
   │            ------ Expected 'fun'
   │

