language/move-lang/tests/move_check/parser/function_public_native.move
module M {
    // The "native" keyword is expected before the "public" keyword.
    public native fun f();
}
